# shortuuid

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  COPYING  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yml  test.yml
shortuuid/: __init__.py  __main__.py  benchmark_optimizations.py  cli.py  django_fields.py  main.py  test_optimizations.py  test_shortuuid.py  tests.py  verify_optimizations.py
