[tool.poetry]
name = "shortuuid"
version = "1.0.3"
description = "A generator library for concise, unambiguous and URL-safe UUIDs."
license = "BSD"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
homepage = "https://github.com/stochastic-technologies/shortuuid/"
authors = ["Stochastic Technologies <info@stochastictechnologies.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.5"
