[tool.poetry]
name = "shortuuid"
version = "1.0.8"
description = "A generator library for concise, unambiguous and URL-safe UUIDs."
license = "BSD"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
homepage = "https://github.com/skorokithakis/shortuuid/"
authors = ["Stavros Korokithakis <hi@stavros.io>"]
readme = "README.md"
include = ["COPYING"]

[tool.poetry.scripts]
shortuuid = "shortuuid:cli.main"

[tool.poetry.dependencies]
python = ">=3.5"
